# screen-buffer-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: publish.yml  release.yml
docs/: requirements.md
src/device_manager_mcp/: __init__.py  __main__.py  router.py  server.py
src/device_manager_mcp/backends/: adb.py  scrcpy.py
src/screen_buffer_mcp/: __init__.py  __main__.py  router.py  server.py
src/screen_buffer_mcp/backends/: __init__.py  adb.py  scrcpy.py
